// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template-functions-modifier should not forget comments inside function body 1`] = `
"'use strict';

/* global views */
// comment 0
// comment 1
views('head__title', function(data, req) {
    return req.l10n('yandex');
});
// comment 2
// comment 3
views('head__links', function(data, req) {
    var links = [];
    links.push({
        rel: 'search',
        href: '//yandex.' + req.MordaZone + '/opensearch.xml',
        title: req.l10n('page.opensearch'),
        type: 'application/opensearchdescription+xml'
    });
    return links;
});
// comment 4
// comment 5
views('head__metas', function(data, req) {
    var metas = [],
        turkey = req.MordaZone === 'com.tr';
    var ogDescription = '',
        ogTitle = '';
    return metas;
}); // comment 6
// comment 7
"
`;

exports[`template-functions-modifier should transform self calling functions 1`] = `
"'use strict';

/* global views */
views('head__title', function(data, req) {
    return req.l10n('yandex');
});
views('head__links', function(data, req) {
    var links = [];
    links.push({
        rel: 'search',
        href: '//yandex.' + req.MordaZone + '/opensearch.xml',
        title: req.l10n('page.opensearch'),
        type: 'application/opensearchdescription+xml'
    });
    return links;
});
views('head__metas', function(data, req) {
    var metas = [],
        turkey = req.MordaZone === 'com.tr';
    var ogDescription = '',
        ogTitle = '';
    return metas;
});
"
`;
